Finale Version - versendet an Prof

--- a/Hausarbeit.tex
+++ b/Hausarbeit.tex
@@ -40,6 +40,8 @@
 \usepackage{geometry}
 \geometry{a4paper, left=3cm, right=2cm, top=2cm}
 \usepackage{paralist} %braucht man für formatierte Aufzählungen. Mit \begin{compactitem} \item ... und \end{compactitem} bekommt man keine Leerzeichen zwischen den aufgezählten Punkten
+%\usepackage{remreset}
+\usepackage[multiple]{footmisc}
 
 
 
