--- a/kapitel/Rudolf_Steiner.tex
+++ b/kapitel/Rudolf_Steiner.tex
@@ -14,7 +14,7 @@ Wie in \citet{hemleben63} beschrieben, erhielt Steiner im Jahr 1900 die Aufforde
 
 In den Jahren 1912/13 kam es wegen Steiners Stellung zum Christentum zum Bruch mit der indisch-angelsächsischen Theosophie \citep[vgl.][S. 80]{hemleben63}. Steiner hat \enquote{in Jesus Christus und dem 'Ereignis von Golgatha' das zentrale Geschehen der Erd- und Menschheitsgeschichte gesehen.} \site{hemleben63}{80} Dieser Ansicht waren die Theosophen nicht. Nach dem Rausschmiss Steiners von der theosophischen Gesellschaft 1913 fühlte er sich genötigt, die anthroposophische Gesellschaft zu gründen.
 
-1919 bat Emil Molt, Direktor der Waldorf-Astoria, Rudolf Steiner um Unterstützung bei der Gründung einer Betriebsschule für die Kinder seiner Arbeiter. Dadurch entstand die erste Waldorfschule in Stuttgart. \citet[S. 124]{hemleben63} beschreibt, dass die Waldorfschule \enquote{zunächst als Betriebsschule einer Zigarettenfabrik - in Wirklichkeit als fruchtbarer Keim einer Weltschulbewegung} entstand. Steiner hielt in der Zeit von 1919 - 1924 etliche Vortragszyklen für Lehrer und Erzieher in Deutschland, England und Holland. Er vermittelte pädagogische Leitideen auf Grund seiner anthroposophischen Menschenkunde. 
+1919 bat Emil Molt, Direktor der Zigarettenfabrik Waldorf-Astoria, Rudolf Steiner um Unterstützung bei der Gründung einer Betriebsschule für die Kinder seiner Arbeiter. Dadurch entstand die erste Waldorfschule in Stuttgart. \citet[S. 124]{hemleben63} beschreibt, dass die Waldorfschule \enquote{zunächst als Betriebsschule einer Zigarettenfabrik - in Wirklichkeit als fruchtbarer Keim einer Weltschulbewegung} entstand. Steiner hielt in der Zeit von 1919 - 1924 etliche Vortragszyklen für Lehrer und Erzieher in Deutschland, England und Holland. Er vermittelte pädagogische Leitideen auf Grund seiner anthroposophischen Menschenkunde. 
 
 1924 wurde von linker, okkulter Seite ein Giftanschlag auf Steiner verübt. Im September erlitt er einen physischen Zusammenbruch und sein Krankenlager begann. Währenddessen setzte er aber seine Arbeit an seiner Autobiographie \emph{Mein Lebensgang} fort, die er allerdings nicht beenden konnte. Am 30. März 1925 starb Rudolf Steiner in Dornach in der Schweiz \citep[vgl.][]{karl12}.
 
