--- a/literatur.bib
+++ b/literatur.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Birgit Schlotter at 2013-03-21 16:30:48 +0100 
+%% Created for Birgit Schlotter at 2013-03-24 18:50:08 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -16,7 +16,8 @@
 	Lastchecked = {21.03.2013},
 	Title = {Zur wirtschaftlichen Lage der Freien Waldorfschulen in Deutschland},
 	Url = {http://www.bildungsoekonomie-waldorf.de/pdfs/aktuelles/wirtschaftl-lage2009.pdf},
-	Year = {2009}}
+	Year = {2009},
+	Bdsk-Url-1 = {http://www.bildungsoekonomie-waldorf.de/pdfs/aktuelles/wirtschaftl-lage2009.pdf}}
 
 @webpage{roschk13,
 	Author = {Steffen Roschk},
@@ -25,7 +26,8 @@
 	Lastchecked = {19.03.2013},
 	Title = {Zitate Bauern},
 	Url = {http://zitate.net/bauern.html},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {http://zitate.net/bauern.html}}
 
 @book{randoll07,
 	Author = {Heiner Barz AND Dirk Randoll},
@@ -47,7 +49,7 @@
 	Bdsk-Url-1 = {http://www.waldorf-absolventen.de}}
 
 @webpage{alanus13,
-	Author = {{Alanus Hochschule f{\"u}r Kunst und Gesellschaft} },
+	Author = {{Alanus Hochschule f{\"u}r Kunst und Gesellschaft}},
 	Date-Added = {2013-03-14 15:03:09 +0000},
 	Date-Modified = {2013-03-21 14:25:32 +0000},
 	Lastchecked = {14.03.2013},
@@ -184,10 +186,10 @@
 	Author = {Dirk Randoll},
 	Booktitle = {Erziehungswissenschaftliche Zug{\"a}nge zur Waldorfp{\"a}dagogik},
 	Date-Added = {2013-02-26 12:01:34 +0000},
-	Date-Modified = {2013-03-14 12:06:30 +0000},
+	Date-Modified = {2013-03-24 17:50:08 +0000},
 	Editor = {Harm Paschen},
 	Publisher = {VS Verlag f{\"u}r Sozialwissenschaften},
-	Title = {Empirische Forschung und Walkdorfp{\"a}dagogik},
+	Title = {Empirische Forschung und Waldorfp{\"a}dagogik},
 	Year = {2010}}
 
 @book{geuenich09,
