--- a/kapitel/Einleitung.tex
+++ b/kapitel/Einleitung.tex
@@ -5,8 +5,8 @@ Wer kennt sie nicht, die Waldorfschule. Die Schule, an denen die Schüler ihren 
 
 Schaut man sich diese Schulform aber genauer an, erkennt man schnell, dass die Schüler nicht nur ihren Namen tanzen und auch keine Hippies sind. Waldorfschulen sind irgendwie ganzheitlich, die Schüler besonders sozial, musikalisch und handwerklich geschickt. Viele Eltern suchen Alternativen zum staatlichen Schulsystems und melden ihre Kinder deshalb an dieser Schule an. Es wird viel Wert auf das fächerübergreifende Lernen gelegt sowie auf Motivation statt auf Leistungsdruck. 
 
-Rudolf Steiner gründete 1919 die erste Waldorfschule. Über Sinn und Unsinn seiner Reformpädagogik kann man sich auch heute noch streiten. Kritiker sehen die Wissensvermittlung zu kurz kommen, Befürworter loben dagegen, dass die Schüler fürs Leben und nicht nur für die Zeugnisse lernen. Aufgrund von vielen Initiativkreisen zur Begründung von Waldofschulen werden immer mehr dieser alternativen Schulen gegründet. Der Erfolg spricht also für sich und man muss einsehen, dass man diese Pädagogikform nicht mehr ignorieren kann und ausdrücklich thematisieren muss. 
+Rudolf Steiner gründete 1919 die erste Waldorfschule. Über Sinn und Unsinn seiner Reformpädagogik kann man sich auch heute noch streiten. Kritiker sehen die Wissensvermittlung zu kurz kommen, Befürworter loben dagegen, dass die Schüler fürs Leben und nicht nur für die Zeugnisse lernen. Aufgrund von vielen Initiativkreisen zur Begründung von Waldorfschulen werden immer mehr dieser alternativen Schulen gegründet. Der Erfolg spricht also für sich und man muss einsehen, dass man diese Pädagogikform nicht mehr ignorieren kann und ausdrücklich thematisieren muss. 
 
 Inzwischen gibt es bereits mehrere empirische Studien zur Waldorfpädagogik. Wie schneidet diese im Vergleich zu Regelschulen ab? Hält die Praxis, was Steiner einst erreichen wollte? Was wurde aus ehemaligen Waldorfschülern? Diese und weitere Fragen sollen in den unterschiedlichen Studien beantwortet werden. Dennoch sollte man diese auch kritisch hinterfragen. Nicht immer ist das sogenannte schwarz/weiss sehen möglich. 
 
-In der folgenden Hausarbeit möchte ich mich deshalb mit der empirischen Studie zur Bildung und Lebensgestaltung ehemaliger Waldorfschüler von Heiner Bartz und Dirk Randoll auseinandersetzen und hinterfragen. Zu Beginn werde ich etwas näher auf die Biographie Rudolf Steiners, den Begründer der Waldorfpädagogik, eingehen. Um zu verstehen, wie die Waldorfschulen aufgebaut sind, werde ich darauffolgend deren Entstehungsgeschichte und die heutige Umsetzung und Organisation erläutern. Zum Schluss werde ich die Wirkung der Waldorfpädagogik im Licht der Empirie darstellen.
+In der folgenden Hausarbeit möchte ich mich deshalb mit der empirischen Studie zur Bildung und Lebensgestaltung ehemaliger Waldorfschüler von Heiner Bartz und Dirk Randoll auseinandersetzen und hinterfragen. Zu Beginn werde ich auf die Biographie Rudolf Steiners, den Begründer der Waldorfpädagogik, eingehen. Um zu verstehen, wie die Waldorfschulen aufgebaut sind, werde ich darauffolgend deren Entstehungsgeschichte und die heutige Umsetzung und Organisation erläutern. Zum Schluss werde ich die Wirkung der Waldorfpädagogik im Licht der Empirie darstellen.
