--- a/kapitel/Empirische_Studie.tex
+++ b/kapitel/Empirische_Studie.tex
@@ -5,7 +5,7 @@
 
 % subsection empirische_forschung_an_waldorfschulen (end)
 
-Seit nunmehr gut 90 Jahren ist die Waldorfpädagogik mit stetigem Wachstum in Deutschland vertreten. Dennoch wurde ca. 80 Jahre lang keine emprirische Studie zu ihren Auswirkungen durchgeführt. In den Sozialwissenschaften wurden im Zuge der empirischen Wende\footnote{Der empirische Wendepunkt in der Erziehungswissenschaft begann mit der internationalen Studie PISA der OECD 2000, bzw. bereits 1996 mit den Timss-Studien der IEA für Mathematik. Seither werden Schüler vermessen, in Kompetenzstufen eingeordnet und in Bildungsstandards normiert \citep[vgl.][]{arp11}.} eine große Zahl von Forschungsarbeiten durchgeführt und publiziert. Diese beschäftigten sich mit Fragen der Erziehung und Bildung, zu den Bedingungen der Prozesse schulischen Lernens etc. Im waldorfpädagogischen Zusammenhang findet man in dieser Hinsicht aber vergleichsweise wenig. Der Bund der freien Waldorfschulen hat sich damals z.B. gegen eine Teilnahme an der PISA Studie entschieden, da \enquote{eine utilitaristische sowie eine auf Leistung und Wettbewerb ausgerichtete Bildung eher fremd ist} \citep[vgl.][s.127ff]{paschen10}.  Die einzelnen Schulen konnten allerdings selber entscheiden, ob sie daran teilnehmen wollen.
+Seit nunmehr gut 90 Jahren ist die Waldorfpädagogik mit stetigem Wachstum in Deutschland vertreten. Dennoch wurde ca. 80 Jahre lang keine empirische Studie zu ihren Auswirkungen durchgeführt. In den Sozialwissenschaften wurden im Zuge der empirischen Wende\footnote{Der empirische Wendepunkt in der Erziehungswissenschaft begann mit der internationalen Studie PISA der OECD 2000, bzw. bereits 1996 mit den Timss-Studien der IEA für Mathematik. Seither werden Schüler vermessen, in Kompetenzstufen eingeordnet und in Bildungsstandards normiert \citep[vgl.][]{arp11}.} eine große Zahl von Forschungsarbeiten durchgeführt und publiziert. Diese beschäftigten sich mit Fragen der Erziehung und Bildung, zu den Bedingungen der Prozesse schulischen Lernens etc. Im waldorfpädagogischen Zusammenhang findet man in dieser Hinsicht aber vergleichsweise wenig. Der Bund der freien Waldorfschulen hat sich damals z.B. gegen eine Teilnahme an der PISA Studie entschieden, da \enquote{eine utilitaristische sowie eine auf Leistung und Wettbewerb ausgerichtete Bildung eher fremd ist} \citep[vgl.][S.127ff]{paschen10}.  Die einzelnen Schulen konnten allerdings selber entscheiden, ob sie daran teilnehmen wollen.
 
 An was kann es liegen, dass es so wenige empirische Studien zur Waldorfpädagogik gibt? \cite[S. 127f]{paschen10} nennt dafür folgende ausschlaggebende Gründe:
 
@@ -24,16 +24,14 @@ Erst vor ca. zehn Jahren hat sich die Waldorfbewegung gegenüber dem empirischen
 \subsection{Absolventen von Waldorfschulen - Eine empirische Studie zu Bildung und Lebensgestaltung ehemaliger Waldorfschüler} % (fold)
 \label{Studie}
 
-Interessant ist die Frage, wie wirksam die Pädagogik Steiners wirklich ist. Das Charakteristikum der Waldorfpädagogik ist ja die Inanspruchnahme nachhaltiger Wirkungen im Blick auf eine erfolgreiche Lebensgestaltung. \citet[][S. 13]{randoll07} beschreiben die gelingende Lebensgestaltung wie folgt: \enquote{Von der Freude am beruflichen Engagement, über Verantwortungsbewusstsein für Gesellschaft und Umwelt bis hin zu positiven Einflüssen auf Lebensführung und Gesundheit im Alter reichen die Wirkungserwartungen}.
+Interessant ist die Frage, wie wirksam die Pädagogik Steiners wirklich ist. Das Charakteristikum der Waldorfpädagogik ist die Inanspruchnahme nachhaltiger Wirkungen im Blick auf eine erfolgreiche Lebensgestaltung. \citet[][S. 13]{randoll07} beschreiben die gelingende Lebensgestaltung wie folgt: \enquote{Von der Freude am beruflichen Engagement, über Verantwortungsbewusstsein für Gesellschaft und Umwelt bis hin zu positiven Einflüssen auf Lebensführung und Gesundheit im Alter reichen die Wirkungserwartungen}.
 
 Die Studie \enquote{Absolventen von Waldorfschulen - Eine empirische Studie zu Bildung und Lebensgestaltung ehemaliger Waldorfschüler} will herausfinden, ob sich Anhaltspunkte für die Verwirklichung der oben genannten Erwartungen finden lassen.
 Ziel der Studie war es, gesicherte Resultate zu erhalten, wie der Besuch von Waldorfschulen sich auf die Schüler ausgewirkt hat und was sie heute über diese Schulform denken.
 Die Studie wurde unter der Leitung von Professor Heiner Barz von der Heinrich Heine Universität Düsseldorf und von Professor Dirk Randoll von der Alanus Hochschule Alfter durchgeführt. 
 Für die Untersuchung wurden ehemalige Waldorfschüler dreier Altersgruppen eingehend befragt. 
-Es werden Berufskarrieren, Lebensorientierung, Religion und Gesundheit analysiert. 
-Die Schüler waren zum Zeitpunkt der Erhebung (2005/06) 62-66, 50-59 und 30-37 Jahre alt \citep[vgl.][]{randoll07, paschen10}
-
-\todo{Du wechselst beim Sprechen über die Studie zwischen Präsenz und Vergangenheit.}
+Es wurden Berufskarrieren, Lebensorientierung, Religion und Gesundheit analysiert. 
+Die Schüler waren zum Zeitpunkt der Erhebung (2005/06) 62-66, 50-59 und 30-37 Jahre alt \citep[vgl.][]{randoll07, paschen10}.
 
 Die Erfassung von Veränderungen innerhalb der Waldorfschüler sowie unterschiedlichste Vergleiche zwischen der Population ehemaliger Waldorfschüler und der Grundgesamtheit ihrer gleichaltrigen Mitmenschen konnte durch die ausführliche standardisierte Befragungen dieser drei verschiedenen Absolventengenerationen ermöglicht werden. Durch den Rückblick der ehemaligen kristallisieren sich Stärken und Schwächen der von ihnen erlebten Waldorfpädagogik heraus. Zum Beispiel das Bevorzugen und Vernachlässigen von Interessensdomänen oder die Gefahr der Abschottung nach außen hin, also alles, was nicht die Waldorfgemeinschaft betrifft \citep[vgl.][S. 12]{randoll07}.
 
@@ -85,13 +83,13 @@ Gensicke teilt die ehemaligen Waldorfschüler in drei verschiedene Typen ein:
 	\end{compactitem}
 
 Die Kulturorientierten bevorzugen anspruchsvolle kulturelle und bildungsbezogene Aktivitäten\footnote{z.B. Museum, Oper, Theater oder Lesen \citep[vgl.][S. 17]{randoll07}.}. 
-Diese Gruppe interessiert sich am ehesten für antroposophische Themen. 
-22\% davon gaben sogar an, das sie praktizierende oder engagierte Antroposophen seien. 
+Diese Gruppe interessiert sich am ehesten für anthroposophische Themen. 
+22\% davon gaben sogar an, das sie praktizierende oder engagierte Anthroposophen seien. 
 Bei den Beziehungsorientierten steht das Mitmenschliche und Emotionale im Vordergrund. 
 Sie wollen u.a. für andere Menschen da sein und es ist eine häusliche Do-it-yourself Orientierung festzustellen. 
 Bei den Hedonisten kann man ein auf Körperlichkeit, Sport und Sexualität prägendes Einstellungsmuster erkennen. 
 In dieser Gruppe kann man auch feststellen, dass sie dem Lebensgenuss stärker zugewandt sind. 
-Nur 1\% der Hedonisten bekennen sich zur Antroposophie. 
+Nur 1\% der Hedonisten bekennen sich zur Anthroposophie. 
 Das Alter innerhalb der drei Gruppen ist auch interessant. 
 Man findet den Kulturorientierten Typus eher in den älteren Jahrgängen, während man den Hedonisten am ehesten in den jüngeren Jahrgängen findet. 
 Auch die Geschlechterverteilung ist klassisch: die Hedonisten sind eher männlich besetzt (64\% der Befragten), während die beiden anderen Gruppen einen leicht weiblichen Überschuss haben. 
@@ -101,11 +99,11 @@ Die Hedonisten kritisieren auch gängige Punkte wie die Vernachlässigung der Na
 \subsubsection{Die religiöse Orientierung}
 
 Michael N. Ebertz hat sich für die Studie der religiösen Orientierung der ehemaligen Schüler gewidmet. 
-In \citet[][S. 18f]{randoll07} werden seine Ergebnisse wie folgt zusammengefasst: In den erhobenen Stichproben wurden 31.3\% Protestanten, 9,4\% Mitglieder der Christengemeinschaft und genau so viele Katholiken gezählt. 
-\citet[][S. 18]{randoll07} erklären den höheren Anteil an Protestanten damit, dass die Antroposophie \enquote{eine stärkere innere Affinität zum Arbeitsethos des Protestantismus hat}. 
-Interessant dabei ist wiederum, dass in der jüngsten Altersgruppe der Anteil der Katholiken schon bei 14,6\% liegt, was wiederum zeigt, dass die Hedonisten, wie in Kapitel \ref{subsub:lebensorientierung} beschrieben, sich kaum mehr zur Antroposophie bekennen. 
+In \citet[][S. 18f]{randoll07} werden seine Ergebnisse wie folgt zusammengefasst: In den erhobenen Stichproben wurden 31,3\% Protestanten, 9,4\% Mitglieder der Christengemeinschaft und genau so viele Katholiken gezählt. 
+\citet[][S. 18]{randoll07} erklären den höheren Anteil an Protestanten damit, dass die Anthroposophie \enquote{eine stärkere innere Affinität zum Arbeitsethos des Protestantismus hat}. 
+Interessant dabei ist wiederum, dass in der jüngsten Altersgruppe der Anteil der Katholiken schon bei 14,6\% liegt, was wiederum zeigt, dass die Hedonisten, wie in Kapitel \ref{subsub:lebensorientierung} beschrieben, sich kaum mehr zur Anthroposophie bekennen. 
 
-Anhand der vorliegenden Daten kann man der Waldorfschule also nicht vorwerfen, dass sie zur Antroposophie erziehe. 
+Anhand der vorliegenden Daten kann man der Waldorfschule also nicht vorwerfen, dass sie zur Anthroposophie erziehe. 
 \citet[][S. 19]{randoll07} schreiben, dass die Mehrheit der Ehemaligen ihr \enquote{indifferent oder skeptisch} gegenüber stehen. 
 Sie gaben auch an, dass die Waldorfschule kaum eine aktive Rolle bei der Vermittlung anthroposophischer Überzeugungen spiele, sie aber nichts desto trotz eine \enquote{hohe religiöse und weltanschauliche Offenheit} besitze.
 
